@@ -5,9 +5,10 @@ defined( 'ABSPATH' ) || exit;
 /**
  * Update Order request class.
  */
-class Nuvei_Update_Order extends Nuvei_Request {
-
-	public function __construct( array $plugin_settings) {
+class Nuvei_Update_Order extends Nuvei_Request
+{
+	public function __construct( array $plugin_settings)
+    {
 		parent::__construct($plugin_settings);
 	}
 	
@@ -17,7 +18,8 @@ class Nuvei_Update_Order extends Nuvei_Request {
 	 * @global Woocommerce $woocommerce
 	 * @return array
 	 */
-	public function process() {
+	public function process()
+    {
 		$nuvei_last_open_order_details = array();
 		
 		if (!empty(WC()->session)) {
@@ -53,6 +55,7 @@ class Nuvei_Update_Order extends Nuvei_Request {
 			'orderId'			=> $nuvei_last_open_order_details['orderId'],
 			'currency'			=> get_woocommerce_currency(),
 			'amount'			=> $cart_amount,
+            'transactionType'   => (float) $cart->total == 0 ? 'Auth' : $this->plugin_settings['payment_action'],
 			'billingAddress'	=> $addresses['billingAddress'],
 			'userDetails'       => $addresses['billingAddress'],
 			'shippingAddress'	=> $addresses['shippingAddress'],
@@ -108,7 +111,8 @@ class Nuvei_Update_Order extends Nuvei_Request {
 	 *
 	 * @return array
 	 */
-	protected function get_checksum_params() {
+	protected function get_checksum_params()
+    {
 		return array('merchantId', 'merchantSiteId', 'clientRequestId', 'amount', 'currency', 'timeStamp');
 	}
 }
