@@ -4,6 +4,7 @@
     * Added the possibility to create empty Payment Plan. The merchant must leave the Payment Plan field empty.
     * When create Nuvei Payment plan "Select a Plan..." option was renamed to "Without Plan".
     * When edit Nuvei Payment plans "Without Plan" option is available.
+    * Forse transaction type to Auth when Order total amount is 0.
 
 # 1.3.0
     * Allow checkout with any combination of products.
